--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -9,7 +9,8 @@
        spruce: very okay
     -->
     <link href="/static/bootstrap/css/spruce.bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/movies.css" rel="stylesheet" media="screen">
+<!--     <link href="/static/bootstrap/bootstrap-select.min.css" rel="stylesheet" media="screen">
+ -->    <link href="/static/movies.css" rel="stylesheet" media="screen">
   </head>
   <body>
     {% for message in messages %}
@@ -21,6 +22,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
     <script src="/static/jquery.cookie.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <!--script src="/static/bootstrap/bootstrap-select.min.js"></script-->
     <script src="/static/locations.js"></script>
     <script src="/static/locations_sync.js"></script>
     <script src="/static/global.js"></script>
