--- a/movies/templates/locations_add_path.html
+++ b/movies/templates/locations_add_path.html
@@ -1,21 +1,47 @@
 {% extends "generic.html" %}
 {% block body %}
 	
-	<div id='locations_sync_dialog' class="modal hide fade" tabindex='-1'>
+	<div id='locations_sync_dialog' class="modal hide fade container" tabindex='-1'>
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 		</div>
 		<div class="modal-body">
-			<form action='{%url "#locations_add_path_mediainfo" %}' method='POST'>{% csrf_token %}
+			<form action='{%url "#locations_add_path_mediainfo" %}' method='POST' class='form-horizontal'>{% csrf_token %}
 				<input type='hidden' name='location.id' value='{{location.id}}'>
 				<input type='hidden' name='location.path' value='{{path}}'>
 				<input type='hidden' name='file.path'>
 				<ol>
-					<li>Getting info on <span class='path'>file</span></li>
-					<div class='step2'>
+					<li>Getting media info on <div class='path'>file</div></li>
+					<div class='step2 row'>
+						<input name='movie.title' type='text' class='span4'>
+						<a href='{%url "#locations_add_path_imdbinfo_try" %}' 
+							id='location-sync-accept-title' 
+							class="btn">Accept title</a>
+					</div>
+
+					<li class='step3'>Accessing IMDB to get movie info</li>
+
+					<div class='step4 row'>
+						<select name='movie.imdb' class='span4'></select>
+						<a href='{%url "#locations_add_path_imdbinfo_exact" %}' 
+							id='location-sync-check-title' 
+							class="btn">Check title</a>
+					</div>
+
+					<li class='step5'>Retrieving full IMDB info</li>
+
+					<div class='step6 row'>
+						<div class='span4'>
+							<img alt='movie poster'>
+							<div class='imdb_info span3'>hola, mi amor, yo soy tu lobo, y quiero</div>
+	 					</div>
+	 					<a href='{%url "#locations_add_path_imdbinfo_exact" %}' 
+							id='location-sync-check-title' 
+							class="btn">Check title</a>
 					</div>
 				</ol>
 			</form>
+			<div class='error'></div>
 			<div class="progress progress-striped active">
 				<div class="bar" style="width: 100%;"></div>
 			</div>
