--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -152,11 +152,12 @@ caption {
   width: 120px;
   float: right; }
 
-#locations_sync_dialog .step6 img {
+#locations_sync_dialog img.step6 {
   float: left;
-  width: 60px; }
+  width: 110px; }
 
-#locations_sync_dialog div.imdb_info {
-  float: right;
+#locations_sync_dialog .imdb_info {
+  padding: 12px 0px 12px 150px;
   font-family: "Courier New", Courier, monospace;
-  font-size: 11px; }
+  font-size: 12px;
+  font-weight: bold; }
