Valid modal search

--- a/movies/scss/locations.scss
+++ b/movies/scss/locations.scss
@@ -55,7 +55,8 @@
 }
 
 #locations_sync_dialog .row {
-	padding-bottom: 12px;
+	padding-bottom: 24px;
+	padding-left: 20px;
 }
 
 #locations_sync_dialog a.btn{
