--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -129,12 +129,12 @@ caption {
   font-family: "Courier New", Courier, monospace;
   font-size: 12px; }
 
-#locations_sync_dialog .path {
+#imdb_dialog .path {
   font-family: "Courier New", Courier, monospace;
   font-size: 11px;
   font-weight: bold; }
 
-#locations_sync_dialog .error {
+#imdb_dialog .error {
   display: none;
   background: #c00;
   color: yellow;
@@ -142,20 +142,20 @@ caption {
   width: 100%;
   padding: 6px 0; }
 
-#locations_sync_dialog .row {
+#imdb_dialog .row {
   padding-bottom: 24px;
   padding-left: 20px; }
 
-#locations_sync_dialog a.btn {
+#imdb_dialog a.btn {
   width: 80px;
   float: right; }
 
-#locations_sync_dialog img.step6 {
+#imdb_dialog img.step6 {
   float: left;
   width: 107px;
   max-height: 158px; }
 
-#locations_sync_dialog .imdb_info {
+#imdb_dialog .imdb_info {
   padding: 12px 0px 12px 150px;
   font-family: "Courier New", Courier, monospace;
   font-size: 12px;
