--- a/movies/templates/locations_add_path.html
+++ b/movies/templates/locations_add_path.html
@@ -1,7 +1,7 @@
 {% extends "generic.html" %}
 {% block body %}
 	
-	<div id='locations_sync_dialog' class="modal hide fade container" tabindex='-1'>
+	<div id='imdb_dialog' class="modal hide fade container" tabindex='-1'>
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 		</div>
