--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -24,7 +24,7 @@
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <!--script src="/static/bootstrap/bootstrap-select.min.js"></script-->
     <script src="/static/locations.js"></script>
-    <script src="/static/imdb.js"></script>
+    <script src="/static/imdb_dialog.js"></script>
     <script src="/static/global.js"></script>
   </body>
 </html>
