--- a/movies/templates/locations_add_path.html
+++ b/movies/templates/locations_add_path.html
@@ -1,43 +1,8 @@
 {% extends "generic.html" %}
 {% block body %}
+
+	{%include "imdb_dialog.html"%}
 	
-	<div id='imdb_dialog' class="modal hide fade container" tabindex='-1'>
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		</div>
-		<div class="modal-body">
-			<form action='{%url "#imdb_get_mediainfo" %}' method='POST' class='form-horizontal'>{% csrf_token %}
-				<input type='hidden' name='location.id' value='{{location.id}}'>
-				<input type='hidden' name='location.path' value='{{path}}'>
-				<input type='hidden' name='file.path'>
-				<div class='path'>file</div>
-				<div class='step2 row'>
-					<input name='movie.title' type='text' class='span5'>
-					<a href='{%url "#imdb_search_title" %}' 
-						id='location-sync-accept-title' 
-						class="btn">Search</a>
-				</div>
-
-				<div class='step4 row'>
-					<select name='movie.imdb' class='span5'
-					        data-href='{%url "#imdb_access_url" %}'>
-					</select>
-					<a href='{%url "#imdb_access_url" %}' 
-						id='location-sync-check-title' 
-						class="btn">Accept</a>
-				</div>
-
-				<a href='#' target='_blank'><img alt='movie poster' class='step6'></a>
-				<div class='step6 imdb_area'><div class='imdb_info'></div></div>
-
-			</form>
-			<div class='error'></div>
-			<div class="progress progress-striped active">
-				<div class="bar" style="width: 100%;"></div>
-			</div>
-		</div>
-	</div>
-
 	<table id='locations_sync' class='table no_table-bordered no_table-hover'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
