--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -9,8 +9,9 @@
        spruce: very okay
     -->
     <link href="/static/bootstrap/css/journal.bootstrap.min.css" rel="stylesheet" media="screen">
-<!--     <link href="/static/bootstrap/bootstrap-select.min.css" rel="stylesheet" media="screen">
- -->    <link href="/static/movies.css" rel="stylesheet" media="screen">
+    <link href="/static/messenger/css/messenger.css" rel="stylesheet" media="screen">
+    <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen">
+    <link href="/static/movies.css" rel="stylesheet" media="screen">
   </head>
   <body>
     {% for message in messages %}
@@ -22,8 +23,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
     <script src="/static/jquery.cookie.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <!--script src="/static/bootstrap/bootstrap-select.min.js"></script-->
+    <script src="/static/messenger/js/messenger.min.js"></script>
+    <script src="/static/messenger/js/messenger-theme-future.js"></script>
     <script src="/static/locations.js"></script>
+    <script src="/static/locations_sync.js"></script>
     <script src="/static/imdb_dialog.js"></script>
     <script src="/static/global.js"></script>
   </body>
