--- a/movies/templates/imdb_dialog.html
+++ b/movies/templates/imdb_dialog.html
@@ -19,9 +19,7 @@
 				<select name='movie.imdb' class='span5'
 				        data-href='{%url "#imdb_access_url" %}'>
 				</select>
-				<a href='{%url "#imdb_access_url" %}' 
-					id='location-sync-check-title' 
-					class="btn">Accept</a>
+				<a href='#' id='location-sync-check-title' class="btn">Accept</a>
 			</div>
 
 			<a href='#' target='_blank'><img alt='movie poster' class='step6'></a>
