--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -23,7 +23,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
     <script src="/static/jquery.cookie.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/messenger/js/messenger.js"></script>
+    <script src="/static/messenger/js/messenger.min.js"></script>
     <script src="/static/messenger/js/messenger-theme-future.js"></script>
     <script src="/static/locations.js"></script>
     <script src="/static/locations_sync.js"></script>
