--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -8,9 +8,9 @@
        cosmo: nice, waiting bar not ok
        spruce: very okay
     -->
-    <link href="/static/bootstrap/css/journal.bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/messenger/css/messenger.css" rel="stylesheet" media="screen">
-    <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen">
+    <link href="/static/vendor/bootstrap/css/journal.bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/vendor/messenger/css/messenger.css" rel="stylesheet" media="screen">
+    <link href="/static/vendor/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen">
     <link href="/static/movies.css" rel="stylesheet" media="screen">
   </head>
   <body>
@@ -20,14 +20,16 @@
         {{ message }}</div>
     {% endfor %}
     {% block body %}{% endblock %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
-    <script src="/static/jquery.cookie.js"></script>
-    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/messenger/js/messenger.min.js"></script>
-    <script src="/static/messenger/js/messenger-theme-future.js"></script>
+    <script src="/static/vendor/jquery-1.9.1.min.js"></script>
+    <script src="/static/vendor/jquery.cookie.js"></script>
+    <script src="/static/vendor/json2.js"></script>
+    <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/vendor/messenger/js/messenger.min.js"></script>
+    <script src="/static/vendor/messenger/js/messenger-theme-future.js"></script>
     <script src="/static/locations.js"></script>
     <script src="/static/locations_sync.js"></script>
     <script src="/static/imdb_dialog.js"></script>
+    <script src="/static/ajax.js"></script>
     <script src="/static/global.js"></script>
   </body>
 </html>
