--- a/movies/templates/imdb_dialog.html
+++ b/movies/templates/imdb_dialog.html
@@ -22,6 +22,8 @@
 				<a href='#' id='location-sync-check-title' class="btn">Accept</a>
 			</div>
 
+			<hr class='step6'>
+
 			<a href='#' target='_blank'><img alt='movie poster' class='step6'></a>
 			<div class='step6 imdb_area'><div class='imdb_info'></div></div>
 
