to return valid information on movie update

--- a/movies/templates/movies.html
+++ b/movies/templates/movies.html
@@ -15,7 +15,7 @@
 		    <div class='movie_section'>
 		    	<div class='movie_image'>
 					{% if movie.image %}
-					<img src='/static/mov_imgs/{{movie.image}}'>
+					<img src='{{movie.image}}'>
 					{%endif%}
 				</div>
 		    	<div class='movie_info'>
