--- a/movies/templates/locations_sync_item.html
+++ b/movies/templates/locations_sync_item.html
@@ -1,7 +1,7 @@
 <td>
   	{% if not in_db %}
-	    <a class="btn btn-mini btn-warning search_path" href="#">
-	    <i class="icon-search icon-white"></i></a>
+	    <a class="btn btn-mini btn-warning add_path" href="#">
+	    <i class="icon-plus icon-white"></i></a>
     {% endif %}
 </td>
 <td>
