First working version to add movies

--- a/movies/templates/movies.html
+++ b/movies/templates/movies.html
@@ -34,7 +34,7 @@
 			        </div>
 			        <div class='movie_info_item'>
 			        	<div class='movie_info_item_key'>Audio:</div>
-			        	<div class='movie_info_item_value'>{{movie.audio}}</div>
+			        	<div class='movie_info_item_value'>{{movie.audios}}</div>
 			        </div>
 			        <div class='movie_info_item'>
 			        	<div class='movie_info_item_key'>Subs:</div>
