--- a/movies/scss/locations.scss
+++ b/movies/scss/locations.scss
@@ -37,3 +37,16 @@
 	font-family: "Courier New", Courier, monospace;
 	font-size: 12px;
 }
+
+#locations_sync_problems_dialog .path-problem-0 {
+  color: #a00;
+}
+
+
+#locations_sync_problems_dialog .path-problem-1 {
+  color: #a70;
+}
+
+#locations_sync_problems_dialog .path-problem-2 {
+  color: #0da;
+}
