--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -132,6 +132,15 @@ caption {
   font-family: "Courier New", Courier, monospace;
   font-size: 12px; }
 
+#locations_sync_problems_dialog .path-problem-0 {
+  color: #a00; }
+
+#locations_sync_problems_dialog .path-problem-1 {
+  color: #a70; }
+
+#locations_sync_problems_dialog .path-problem-2 {
+  color: #0da; }
+
 #imdb_dialog .path {
   font-family: "Courier New", Courier, monospace;
   font-size: 11px;
