--- a/movies/templates/movies_control.html
+++ b/movies/templates/movies_control.html
@@ -2,9 +2,9 @@
 {% block body %}
 
 <ul>
-{%for key, value in info%}
+{%for key, image, value in info%}
 	<li>
-		{{key.0}} / {{key.1}} @ {{key.2}}
+		{{key.0}} / {{key.1}} @ {{key.2}} / {{image}}
 		<ul>
 			{%for movie, locations in value%}
 				<li>
