--- a/movies/templates/locations.html
+++ b/movies/templates/locations.html
@@ -18,7 +18,7 @@
 		</form>
 	</div>
 
-	<table id='locations' class='table no_table-bordered no_table-hover'>
+	<table id='locations' class='table table-striped no_table-bordered table-hover'>
 		<caption>Locations</caption>
 		<thead>
 			<tr><th>Name</th><th>Description</th><th>Operations</th></tr>
