--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -18,7 +18,7 @@
 	</div>
 
 	
-	<table id='locations_sync' class='table no_table-bordered no_table-hover'>
+	<table id='locations_sync' class='table table-striped no_table-bordered table-hover'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
 			<tr><th>Add</th><th>Path &amp; Title</th><th>Remove</th></tr>
