--- a/movies/templates/movies_control.html
+++ b/movies/templates/movies_control.html
@@ -1,7 +1,7 @@
 {% extends "generic.html" %}
 {% block body %}
 
-<table id='movies_control' class='table no_table-bordered no_table-hover'>
+<table id='movies_control' class='table table-striped no_table-bordered table-hover'>
 	<caption>Movies control</caption>
 	<thead>
 		<tr>
