--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -9,6 +9,7 @@
        spruce: very okay
     -->
     <link href="/static/vendor/bootstrap/css/journal.bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/vendor/bootstrap/css/bootstrap-fileupload.min.css" rel="stylesheet" media="screen">
     <link href="/static/vendor/messenger/css/messenger.css" rel="stylesheet" media="screen">
     <link href="/static/vendor/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen">
     <link href="/static/movies.css" rel="stylesheet" media="screen">
@@ -19,11 +20,13 @@
     <script src="/static/vendor/jquery.cookie.js"></script>
     <script src="/static/vendor/json2.js"></script>
     <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/vendor/bootstrap/js/bootstrap-fileupload.min.js"></script>
     <script src="/static/vendor/messenger/js/messenger.min.js"></script>
     <script src="/static/vendor/messenger/js/messenger-theme-future.js"></script>
     <script src="/static/locations.js"></script>
     <script src="/static/locations_sync.js"></script>
     <script src="/static/imdb_dialog.js"></script>
+    <script src="/static/movies_control.js"></script>
     <script src="/static/ajax.js"></script>
     <script src="/static/global.js"></script>
     {% if messages %}
