--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -21,10 +21,10 @@
 	<table id='locations_sync' class='table table-striped no_table-bordered table-hover'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
-			<tr><th>Add</th><th>Path &amp; Title</th><th>Remove</th></tr>
+			<tr><th>Op</th><th>Path &amp; Title</th><th>Subtitles</th></tr>
 		</thead>
 		<tbody>
-		    {% for path, title, in_fs, in_db in movies %}
+		    {% for path, title, in_fs, in_db, lensubs, subs in movies %}
 		    <tr>
 				{%include "locations_sync_item.html"%}
 			</tr>
