--- a/movies/templates/movies_control.html
+++ b/movies/templates/movies_control.html
@@ -1,13 +1,47 @@
 {% extends "generic.html" %}
 {% block body %}
 
+<div id='subtitle_dialog' class="modal hide fade container" tabindex='-1'>
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		<h5>Add subtitles</h5>
+	</div>
+	<form action='{%url "#movies_control_subtitle_dialog" %}' method='POST' class='form-horizontal'>{% csrf_token %}
+		<input type='hidden' name='movie.id' value='{{movie.id}}'>
+		<input type='hidden' name='location.id' value='{{location.id}}'>
+		<div class="modal-body">
+			<div class="fileupload fileupload-new" data-provides="fileupload">
+			  <div class="input-append">
+			    <div class="uneditable-input span5">
+			    	<i class="icon-file fileupload-exists"></i> 
+			    	<span class="fileupload-preview"></span>
+		    	</div>
+		    	<span class="btn btn-file">
+		    		<span id='add-fileupload'>Select file</span>
+					<input type="file" />
+	    		</span>
+			  </div>
+			</div>
+			<select name='language' class='span6'>
+				<option value='English'>English</option>
+				<option value='Spanish'>Spanish</option>
+				<option value='German'>German</option>
+			</select>
+		</div>
+		<div class="modal-footer">
+			<button type='submit' id='add-subtitles-button' class="btn btn-primary">Add subtitles</button>
+		</div>			
+	</form>
+</div>
+
+
 <table id='movies_control' class='table table-striped no_table-bordered table-hover'>
 	<caption>Movies control</caption>
 	<thead>
 		<tr>
 			<th></th><th>Title</th><th>Year</th>
 			<th>Size</th><th>Format</th><th>Audios</th><th>Subs</th>
-			<th>Location</th>
+			<th>Location</th><th>Ops</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -36,6 +70,15 @@
 						<span class='ic_tooltip' data-title='{{location.1}}'>
 						{{location.0.name}}
 						</span>
+					</td>
+					<td>
+						<div class="fileupload fileupload-new" data-provides="fileupload">
+						  <span class="btn-file btn-mini">
+							  	<span class="icon-film icon-white"></span>
+							  	<span class="fileupload-preview hide"></span>
+								<input type="file" />
+						  </span>
+						</div>
 					</td>
 				{%endfor%}			
 			{%endfor%}			
