--- a/movies/templates/imdb_dialog.html
+++ b/movies/templates/imdb_dialog.html
@@ -7,7 +7,7 @@
 			<input type='hidden' name='location.id' value='{{location.id}}'>
 			<input type='hidden' name='location.path' value='{{path}}'>
 			<input type='hidden' name='file.path'>
-			<div class='path'>file</div>
+			<div class='path'></div>
 			<div class='step2 row'>
 				<input name='movie.title' type='text' class='span5'>
 				<a href='{%url "#imdb_search_title" %}' 
