--- a/movies/scss/locations.scss
+++ b/movies/scss/locations.scss
@@ -50,3 +50,9 @@
 #locations_sync_problems_dialog .path-problem-2 {
   color: #0da;
 }
+
+#locations_sync .missing_language {
+  background: red;
+  padding: 0px 10px;
+}
+
