--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -25,7 +25,7 @@
     <script src="/static/vendor/messenger/js/messenger-theme-future.js"></script>
     <script src="/static/locations.js"></script>
     <script src="/static/locations_sync.js"></script>
-    <script src="/static/imdb_dialog.js"></script>
+    <script src="/static/dialog_imdb.js"></script>
     <script src="/static/movies_control.js"></script>
     <script src="/static/ajax.js"></script>
     <script src="/static/global.js"></script>
