--- a/movies/templates/imdb_dialog.html
+++ b/movies/templates/imdb_dialog.html
@@ -28,7 +28,7 @@
 			<div class='step6 imdb_area'><div class='imdb_info'></div></div>
 
 		</form>
-		<div class='error'></div>
+		<div class='error_dialog'></div>
 		<div class="progress progress-striped active">
 			<div class="bar" style="width: 100%;"></div>
 		</div>
