--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -1,22 +1,20 @@
 <td rowspan='{{lensubs}}'>
-    <div class='btn-group'>
-        <a class="btn btn-mini {%if in_db %}disabled{%endif%}" href="#">
-            <i class="icon-{%if in_db%}white{%else%}plus{%endif%}"></i>
-        </a>
-        <a class="btn btn-mini {%if not in_db or not in_fs%}disabled{%endif%}" href="#">
-            <i class="icon-{%if not in_db or not in_fs%}white{%else%}pencil{%endif%}"></i>
-        </a>
-        <a class="btn btn-mini {%if in_fs%}disabled{%endif%}" href="#">
-            <i class="icon-{%if in_fs%}white{%else%}minus{%endif%}"></i>
-        </a>
-    </div>
+    {%if db_id %}
+        {%if in_fs %}
+        <a class="btn btn-mini btn-color-yellow" href="#"><i class="icon-pencil"></i>
+        {% else %}
+        <a class="btn btn-mini btn-color-red" href="#"><i class="icon-minus"></i>
+        {% endif %}
+    {% else %}
+        <a class="btn btn-mini btn-color-green" href="#"><i class="icon-plus"></i>
+    {% endif %}
 </td>
 <td rowspan='{{lensubs}}'>
-	<div class='path ok-{{in_db}}'>{{path}}</div>
+	<div class='path {%if not db_id %}db-False{%endif%}'>{{path}}</div>
 	<div class='title ok-{{in_fs}}'>{{title}}</div>
 </td>
 <td colspan='3'>
-    {%if in_fs %}
+    {%if in_fs and db_id%}
     <a class="btn btn-mini add_subtitle disabled" href="#">
         <i class="icon-plus"></i>
     </a>
