--- a/movies/templates/locations_sync_subtitle.html
+++ b/movies/templates/locations_sync_subtitle.html
@@ -1,15 +1,16 @@
 <tr class='subtitle'>
     <td>
-        <div class='btn-group'>
-            <a class="btn btn-mini {%if not in_fs or not in_db%}disabled{%endif%} edit_subtitle" href="#">
-                <i class="icon-{%if not in_fs%}white{%else%}pencil{%endif%}"></i>
+        {%if in_fs %}          
+            <a class="btn btn-mini btn-color-{%if language%}yellow{%else%}green{%endif%} edit_subtitle" href="#">
+                <i class="icon-pencil"></i>
             </a>
-            <a class="btn btn-mini {%if in_fs or not in_db%}disabled{%endif%}" href="#">
-                <i class="icon-{%if in_fs%}white{%else%}minus{%endif%}"></i>
+        {%else%}
+            <a class="btn btn-mini btn-color-red" href="#">
+                <i class="icon-minus"></i>
             </a>
-        </div>
+        {%endif%}
     </td>
-    <td>
+    <td class='path' {%if language %}data-language='{{language}}'{%endif%}>
         {{path}}
     </td>
     <td>
