--- a/movies/scss/locations.scss
+++ b/movies/scss/locations.scss
@@ -54,6 +54,10 @@
   color: #0da;
 }
 
+#locations_sync .subtitles{
+  font-size: 12px;
+}
+
 #locations_sync .missing_language {
   background: red;
   padding: 0px 10px;
