--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -25,7 +25,7 @@
 			<tr><th>Op</th><th>Path &amp; Title</th><th colpan='3'>Subtitles</th></tr>
 		</thead>
 		<tbody>
-		    {% for path, title, in_fs, db_id, lensubs, subs in movies %}
+		    {% for path, title, in_fs, db_id, insubs, lensubs, subs in movies %}
 		    <tr data-movie-id='{{db_id}}'>
 				{%include "locations_sync_movie.html"%}
 				{% for path, in_fs, language in subs %}
