--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -18,5 +18,6 @@
     <a class="btn btn-mini add_subtitle disabled" href="#">
         <i class="icon-plus"></i>
     </a>
+    <span class='embedded_subs'>{{insubs}}</span>
     {%endif%}
 </td>
