--- a/movies/templates/locations_sync_subtitle.html
+++ b/movies/templates/locations_sync_subtitle.html
@@ -13,7 +13,7 @@
     <td class='path' {%if language %}data-language='{{language}}'{%endif%}>
         {{path}}
     </td>
-    <td>
+    <td class='subtitles'>
         {%if language %}
             {{language}}
         {%else%}
