--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -201,6 +201,9 @@ caption {
 #locations_sync_problems_dialog .path-problem-2 {
   color: #0da; }
 
+#locations_sync .subtitles {
+  font-size: 12px; }
+
 #locations_sync .missing_language {
   background: red;
   padding: 0px 10px; }
