Removal of subtitles

--- a/movies/scss/dialog_imdb.scss
+++ b/movies/scss/dialog_imdb.scss
@@ -1,26 +1,26 @@
-#imdb_dialog .path {
+#dialog_imdb .path {
 	font-family: "Courier New", Courier, monospace;
 	font-size: 11px;
 	font-weight: bold;
 }
 
-#imdb_dialog .row {
+#dialog_imdb .row {
 	padding-bottom: 12px;
 	padding-left: 20px;
 }
 
-#imdb_dialog a.btn{
+#dialog_imdb a.btn{
 	width: 80px;
 	float: right;
 } 
 
-#imdb_dialog img.step6{
+#dialog_imdb img.step6{
 	float: left;
 	width: 107px; 
 	max-height: 158px;
 }
 
-#imdb_dialog .imdb_info{
+#dialog_imdb .imdb_info{
 	padding: 12px 0px 12px 150px;
 	font-family: "Courier New", Courier, monospace;
 	font-size: 12px;
