--- a/movies/templates/locations_sync_subtitle.html
+++ b/movies/templates/locations_sync_subtitle.html
@@ -5,7 +5,7 @@
                 <i class="icon-pencil"></i>
             </a>
         {%else%}
-            <a class="btn btn-mini btn-color-red" href="#">
+            <a class="btn btn-mini btn-color-red remove_subtitle" href="#">
                 <i class="icon-minus"></i>
             </a>
         {%endif%}
