--- a/movies/scss/index.scss
+++ b/movies/scss/index.scss
@@ -30,6 +30,6 @@ caption{
 @import "menu";
 @import "movies";
 @import "locations";
-@import "imdb_dialog";
+@import "dialog_imdb";
 @import "movies_control";
 
