--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -26,6 +26,7 @@
     <script src="/static/locations.js"></script>
     <script src="/static/locations_sync.js"></script>
     <script src="/static/dialog_imdb.js"></script>
+    <script src="/static/dialog_confirm.js"></script>
     <script src="/static/movies_control.js"></script>
     <script src="/static/ajax.js"></script>
     <script src="/static/global.js"></script>
