--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -1,7 +1,8 @@
 {% extends "generic.html" %}
 {% block body %}
 
-	{%include "imdb_dialog.html"%}
+	{%include "dialog_confirm.html"%}
+	{%include "dialog_imdb.html"%}
 	{%include "locations_subtitle_dialog.html"%}
 
 	<div id='locations_sync_problems_dialog' class="modal hide fade container" tabindex='-1'>
@@ -19,7 +20,7 @@
 	</div>
 
 	
-	<table id='locations_sync' class='table table-striped no_table-bordered table-hover'>
+	<table id='locations_sync' class='table table-striped no_table-bordered table-hover' data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' data-location-id='{{location.id}}'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
 			<tr><th>Op</th><th>Path &amp; Title</th><th colpan='3'>Subtitles</th></tr>
