--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -6,7 +6,7 @@
         <a class="btn btn-mini btn-color-red" href="#"><i class="icon-minus"></i>
         {% endif %}
     {% else %}
-        <a class="btn btn-mini btn-color-green" href="#"><i class="icon-plus"></i>
+        <a class="btn btn-mini btn-color-green add-path" href="#"><i class="icon-plus"></i>
     {% endif %}
 </td>
 <td rowspan='{{lensubs}}'>
